--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-Flask==2.0.1
-numpy==1.24.3
+Flask==3.0.0
+Werkzeug==3.0.1
 tensorflow==2.13.0
-Pillow==8.2.0
+keras==2.13.1
+numpy==1.24.3
+Pillow==10.0.0
+Jinja2==3.1.2
+matplotlib==3.7.4 
+scikit-learn==1.2.2
