--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==3.0.0
-Werkzeug==3.0.1
+Flask==1.1.0
+Werkzeug==1.0.0
 tensorflow==2.13.0
 keras==2.13.1
-numpy==1.24.3
+numpy==1.24.2
 Pillow==8.2.0
 scikit-learn==1.3.2
+Jinja2==2.11.2
