--- a/.github/workflows/main_catorrabbitclassification.yml
+++ b/.github/workflows/main_catorrabbitclassification.yml
@@ -28,7 +28,11 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+            python -m pip install --upgrade pip
+            python -m pip install -r requirements.txt
+            # Include the installation of numpy
+            python -m pip install numpy
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
