--- a/.github/workflows/main_catorrabbitclassification.yml
+++ b/.github/workflows/main_catorrabbitclassification.yml
@@ -32,7 +32,7 @@ jobs:
             python -m pip install --upgrade pip
             python -m pip install -r requirements.txt
             # Include the installation of numpy
-            python -m pip install numpy
+            python -m pip install numpy==1.24.3
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
